--- a/sass/pages/boardindex.scss
+++ b/sass/pages/boardindex.scss
@@ -188,6 +188,7 @@
     }
     &-content {
       flex-grow: 1;
+      overflow: hidden;
     }
     &-details {
       @include organized-content;
